Added term level filtering on courses

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="send_notification">Send Notification</string>
     <string name="see_course_note_info">See notes for this course</string>
     <string name="course_note_name">Enter Course Note Here</string>
+    <string name="get_term_courses_tv">See courses in this term</string>
 </resources>
