Added most logic for adding courses to terms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,8 @@
     <string name="course_note_name">Enter Course Note Here</string>
     <string name="get_term_courses_tv">See courses in this term</string>
     <string name="assessments_by_course_tv">See all assessments for this course</string>
+    <string name="assessment_type_text">Assessment Type:</string>
+    <string name="course_status">Course Status:</string>
+    <string name="alarms_for_dates">Set Alarms for these dates?</string>
+    <string name="add_course">Add Course</string>
 </resources>
